# bgSub

./: CMakeLists.txt  NOTES
src/: CMakeLists.txt  bgSub.cpp  bgSub.cpp~
src/lbp/: LBP.cpp  LBP.h
